# agent-contracts

./: .coverage  .cursorrules  .gitignore  .verification-config.json  LICENSE  Makefile  README.md  coverage.xml  package.json  pyproject.toml  requirements.txt
docs/00-enis-complete/: README.md  arquitecturaenisv2.html
docs/00-enis-complete/01-analysis/: ANALISIS_REPOSITORIOS_ENIS_v3.md
docs/00-enis-complete/02-specifications/: EDGE_AGENTS_DESIGN_SPECIFICATION.md
docs/00-enis-complete/04-mappings/: PROMPT_TO_REPOSITORY_MAPPING.md  REPOSITORY_STRUCTURE_RECOMMENDATIONS.md
docs/00-enis-complete/05-repositorios-enis/: AUDITORIA_SEGURIDAD_Y_CORRECCIONES.md  ESTRUCTURA_VISUAL_REPOS.txt  INFORME_COMPLETO_ENIS_V3_ARQUITECTURA.md  MAPEO_REPOSITORIOS_ARQUITECTURA.md  RESUMEN_ARQUITECTURA_REPOS.md
docs/00-enis-complete/05-repositorios-enis/cloud-core/compliance-service/: README.md
docs/00-enis-complete/05-repositorios-enis/cloud-core/inference-service/: 12-inference-master-prompt.md  ROADMAP_INFERENCE_SERVICE.md
docs/00-enis-complete/05-repositorios-enis/cloud-core/observability-service/: README.md
docs/01-enis-complete/: ACLARACION_ESTADOS.md  arquitecturaenisv2.html
docs/01-enis-complete/01-analysis/: IMPLEMENTATION_STATUS_REAL.md
docs/01-enis-complete/03-reports/: ENIS_COMPLETE_ARCHITECTURE_REPORT.md
docs/01-enis-complete/05-repositorios-enis/: ESTRUCTURA_VISUAL_REPOS.txt  MAPEO_REPOSITORIOS_ARQUITECTURA.md  RESUMEN_ARQUITECTURA_REPOS.md
docs/01-sprint/: README.md
docs/01-sprint/S0/: S0 — Kickoff & Repo Bootstrap.md
docs/01-sprint/S1/: sprint_s1 Contracts Core.md
docs/02-legal/: DPIA_Template_ENIS_v3.0.md
docs/03-sprint-builder/: ESTRUCTURA_CREADA.md  README.md  README_SISTEMA_DUAL.md
docs/03-sprint-builder/generators/: PROMPT_GENERATOR_AGENT_CONTRACTS.md  README.md
docs/03-sprint-builder/verifiers/: MIGRATION_GUIDE.md  PROMPT_VERIFICADOR_ALL_SPRINTS_AGENT_CONTRACTS.md  README.md  UNIVERSAL_PRODUCTION_READY_FRAMEWORK.md
docs/04-roadmaps/: README.md  agent-contracts-roadmap-visual.html  agent_contracts_roadmap_2025_2026_detallado.md
docs/05-Template/: COMO_USAR_TEMPLATE.md  EJEMPLO_SPRINT_SIMPLE.md  GRAFANA_DASHBOARDS_GUIDE.md  PLANTILLA_CREADA_RESUMEN.md  SPRINT_TEMPLATE_CLAUDE_CLI.md  SPRINT_TEMPLATE_CLAUDE_CLI_v2.2_backup.md  TEMPLATE_v2.4_UPDATE_SUMMARY.md  UNIVERSAL_TEMPLATE_GUIDE.md  generar_sprint.md
docs/reports/: SPRINT_0_VERIFICATION.md
scripts/verification/: setup-verification.ps1  setup-verification.sh  verify-production-ready.py
src/: __init__.py  main.py
(+80 files in other folders)
